@@ -5,40 +5,36 @@ import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.jinwon.rpm.profile.constants.CountryCode;
 import com.jinwon.rpm.profile.constants.RegexPattern;
 import com.jinwon.rpm.profile.domain.profile.dto.ProfileDto;
+import com.jinwon.rpm.profile.domain.role.Role;
 import com.jinwon.rpm.profile.infra.utils.ModelMapperUtil;
 import com.jinwon.rpm.profile.model.BaseEntity;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
+import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import javax.persistence.CollectionTable;
+import javax.persistence.CascadeType;
 import javax.persistence.Column;
-import javax.persistence.ElementCollection;
 import javax.persistence.Entity;
 import javax.persistence.EnumType;
 import javax.persistence.Enumerated;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
-import javax.persistence.JoinColumn;
+import javax.persistence.OneToMany;
 import javax.persistence.Table;
 import javax.validation.constraints.Email;
 import javax.validation.constraints.Pattern;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Table
 @Getter
 @Entity
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
+@NoArgsConstructor(access = AccessLevel.PROTECTED)
 public class Profile extends BaseEntity implements UserDetails {
 
     @Id
@@ -77,17 +73,17 @@ public class Profile extends BaseEntity implements UserDetails {
     @Enumerated(EnumType.STRING)
     private CountryCode country;
 
-    @Builder.Default
-    @ElementCollection
-    @CollectionTable(name = "user_roles", joinColumns = @JoinColumn(name = "role_id", referencedColumnName = "profileId"))
-    private final List<String> roles = new ArrayList<>();
+    @OneToMany(mappedBy = "profile", cascade = CascadeType.ALL, orphanRemoval = true)
+    private final List<Role> roles = new ArrayList<>();
 
     @JsonDeserialize(using = AuthorityDeserializer.class)
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return this.roles.stream()
+                .map(Role::getRoleType)
+                .map(Enum::name)
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
@@ -118,6 +114,11 @@ public class Profile extends BaseEntity implements UserDetails {
     @Override
     public boolean isEnabled() {
         return true;
+    }
+
+    public void grantRoles(Role role) {
+        this.roles.add(role);
+        role.grant(this);
     }
 
     public Profile patch(ProfileDto profileDto, Profile profile) {
